--- a/spec/fixtures/views/Team_assessment_requests_can_manage_requests-show-assessment-requests/view.html
+++ b/spec/fixtures/views/Team_assessment_requests_can_manage_requests-show-assessment-requests/view.html
@@ -143,6 +143,15 @@ Erweitert
 <td>Frauen-Team</td>
 </tr>
 <tr>
+<th>Name auf der Urkunde</th>
+<td>
+<div class='fa-pull-right'>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/edit?part=certificate_name"><i class="far fa-edit"></i></a>
+</div>
+Frauen-Team
+</td>
+</tr>
+<tr>
 <th>Abkürzung</th>
 <td>Frauen-T</td>
 </tr>
