--- a/spec/fixtures/views/Team_when_certificate_name_form_is_selected_shows_other_form-form/view.html
+++ b/spec/fixtures/views/Team_when_certificate_name_form_is_selected_shows_other_form-form/view.html
@@ -55,7 +55,7 @@ Benutzer
 <div class='container'>
 <h1>MV-Cup</h1>
 <p class='lead m-0 ms-1'>29.02.2024 - Rostock</p>
-<p class='lead m-0 ms-1'>Mannschaft: new-name</p>
+<p class='lead m-0 ms-1'>Mannschaft aktualisieren</p>
 
 </div>
 </header>
@@ -125,131 +125,33 @@ Erweitert
 </header>
 <div class='container mt-4'>
 <div class='alert-flash'>
-<div class='alert alert-info'>Die Änderungen wurden gespeichert.</div>
 </div>
 </div>
 <div class='pb-4 mt-4 container'>
 <div class='row g-4'>
 <div class='col-lg-8'>
-<div class='card mb-3'>
+<form class="simple_form edit_team" id="edit_team_UUID" novalidate="novalidate" action="/2024/mv-cup/teams/UUID" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Mannschaft: new-name</h4>
+<h4 class='m-0 py-2 ps-3'>Mannschaft aktualisieren</h4>
 </div>
 </div>
-<table class='table table-condensed'>
-<tr>
-<th>Name</th>
-<td>new-name</td>
-</tr>
-<tr>
-<th>Name auf der Urkunde</th>
-<td>
-<div class='fa-pull-right'>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/edit?part=certificate_name"><i class="far fa-edit"></i></a>
-</div>
-new-name
-</td>
-</tr>
-<tr>
-<th>Abkürzung</th>
-<td>new-n</td>
-</tr>
-<tr>
-<th>Nummer</th>
-<td>1</td>
-</tr>
-<tr>
-<th>Wertungsgruppe</th>
-<td>Frauen</td>
-</tr>
-<tr>
-<td colspan='2'>
-<div class='alert alert-success mb-0 d-none' id='fire-sport-connected'>
-<i class='far fa-check me-2'></i>
-Verknüpft mit <strong></strong>
-<a target="_blank" rel="noopener" title="Informationen über diese Mannschaft auf Feuerwehrsport-Statistik.de aufrufen" class="btn btn-sm btn-light ms-2" href="https://feuerwehrsport-statistik.de/teams/"><i class='far fa-arrow-up-right-from-square'></i>
-</a></div>
-<div class='alert alert-warning mb-0' id='fire-sport-not-connected'>
-<i class='far fa-warning me-2'></i>
-Keine Verknüpfung mit einer vorhandenen Mannschaft
-</div>
-
-</td>
-</tr>
-<tr>
-<th>Angereist?</th>
-<td>
-<div class='fa-pull-right'>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/markers/UUID/edit?return_to=team"><i class="far fa-edit"></i></a>
-</div>
-
-</td>
-</tr>
-</table>
+<div class='card-body'>
+<input type="hidden" name="part" id="part" value="certificate_name" autocomplete="off" />
+<div class="form-group string optional team_certificate_name"><label class="control-label string optional" for="team_certificate_name">Name auf der Urkunde</label><input class="form-control string optional" type="text" name="team[certificate_name]" id="team_certificate_name" /><small class="form-text text-muted">Wird bei Nichtangabe automatisch mit »Frauen-Team« gefüllt, kann man hier überschreiben.</small></div>
 
 </div>
-<div class='card mb-3'>
-<div class='card-header p-0'>
-<div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Gewünschte Wertungen</h4>
-<a class="card-primary-action" href="/2024/mv-cup/teams/UUID/edit_assessment_requests">Wertungen bearbeiten
-<i class='far fa-edit'></i>
-</a>
+<div class='card-footer'>
+<div class='d-flex justify-content-between align-items-start'>
+<div><button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Mannschaft aktualisieren</button>
+<a class="btn btn-secondary" href="/2024/mv-cup/teams">Abbrechen</a>
 </div>
 </div>
-<table class='table table-condensed'>
-<tr>
-<th>
-<img src="/assets/disciplines/la.svg" width="20" height="20" />
-Löschangriff Nass - Frauen
-</th>
-<td>
-<i class='far fa-check'></i>
-Mannschaftswertung
-</td>
-</tr>
-</table>
-
 </div>
 </div>
+</form></div>
 <div class='col-lg-4'>
-<div class='card'>
-<div class='card-header p-0'>
-<div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Aktionen</h4>
-<a class="card-primary-action" href="/2024/mv-cup/teams">Übersicht
-<i class='far fa-list'></i>
-</a>
-</div>
-</div>
-<div class='card-body'>
-<div class='d-grid gap-2'>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/people/new?return_to=team&amp;team=UUID">Wettkämpfer hinzufügen</a>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/edit">Name bearbeiten</a>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/edit?form=registration_hint">Anmeldungshinweise bearbeiten</a>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/team_list_restrictions/new?team1_id=UUID">Bedingung für Startliste hinzufügen</a>
-<a data-turbo-method="delete" data-turbo-confirm="Mannschaft wirklich löschen? Alle Zeiten usw. werden auch gelöscht!" class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID">Löschen</a>
-</div>
 
-</div>
-</div>
-</div>
-<div class='col-lg-12' id='people-table'>
-<div class='card'>
-<div class='card-header p-0'>
-<div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Wettkämpfer</h4>
-<a class="card-primary-action" href="/2024/mv-cup/people/new?return_to=team&amp;team=UUID">Wettkämpfer hinzufügen
-<i class='far fa-square-plus'></i>
-</a>
-</div>
-</div>
-<div class='card-body'>
-<div class='alert alert-info'>Keine Einträge gefunden</div>
-
-</div>
-</div>
 </div>
 </div>
 </div>
